# simpletest

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  main.cpp  myclass.cpp  myclass.h  show_msg.cpp  show_msg.h
